--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ layout: default
 <ul id="languages">
   <li><a href='#' data-lang="bash">curl</a></li>
   <li><a href='#' data-lang="ruby">Ruby</a></li>
-  <li><a href='#' data-lang="python">Python</a></li>
   <li><a href='#' data-lang="php">PHP</a></li>
-  <li><a href='#' data-lang="java">Java</a></li>
+  <li><a href='#' data-lang="python">Python</a></li>
+  <!-- <li><a href='#' data-lang="java">Java</a></li>
   <li><a href='#' data-lang="node">Node</a></li>
-  <li><a href='#' data-lang="go">Go</a></li>
+  <li><a href='#' data-lang="go">Go</a></li> -->
 </ul>
 
 {% for group in site.data.sections %}
