fix up see all button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
   <li><a href='#' data-lang="java">Java</a></li>
   <li><a href='#' data-lang="node">Node</a></li>
   <li><a href='#' data-lang="go">Go</a></li> -->
-  <li><a href='#introduction'>See all</a></li>
+  <li><a id="all" href='#official-api-libraries'>See all</a></li>
 </ul>
 
 {% for group in site.data.sections %}
